feat: add hero structure

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,17 @@
 </head>
 
 <body>
+    <main class="sign-up">
+        <div class="hero">
+            <div class="hero__title-wrapper">
+                <img src="img/odin-lined.png" alt="Website logo">
+                <h1 class="hero__title">Odin</h1>
+            </div>
+            <p class="hero__img-credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a>
+                on <a href="https://unsplash.com/">Unsplash</a>
+            </p>
+        </div>
+    </main>
 </body>
 
 </html>
