--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,48 @@
                 on <a href="https://unsplash.com/">Unsplash</a>
             </p>
         </div>
+
+        <section class="sign-up-form">
+            <div class="introduction">
+                <p>
+                    This is not a real online service! You know you need something like this in your
+                    life to help you realize your deepest dreams. Sign up <em>now</em> to get started.
+                </p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+
+            <form action="" method="post" id="sign-up-form">
+                <p class="form-heading">Let's do this!</p>
+                <div class="form-group">
+                    <label for="first-name">First name</label>
+                    <input type="text" id="first-name" name="first-name" autocomplete="given-name">
+                </div>
+                <div class="form-group">
+                    <label for="last-name">Last name</label>
+                    <input type="text" id="last-name" name="last-name" autocomplete="family-name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" autocomplete="email">
+                </div>
+                <div class="form-group">
+                    <label for="phone-number">Phone number</label>
+                    <input type="tel" id="phone-number" name="phone-number" autocomplete="tel">
+                </div>
+                <div class="form-group">
+                    <label for="password-1">Password</label>
+                    <input type="password" id="password-1" name="password-1" autocomplete="new-password">
+                </div>
+                <div class="form-group">
+                    <label for="password-2">Confirm password</label>
+                    <input type="password" id="password-2" name="password-2" autocomplete="new-password">
+                </div>
+            </form>
+
+            <button type="submit" form="sign-up-form">Create account</button>
+
+            <p>Already have an account? <a href="#">Log in</a></p>
+        </section>
     </main>
 </body>
 
