--- a/src/index.html
+++ b/src/index.html
@@ -7,24 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up Form</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 
 <body>
-    <main class="sign-up">
+    <main>
         <div class="hero">
             <div class="hero__title-wrapper">
-                <img src="img/odin-lined.png" alt="Website logo">
+                <img src="img/odin-lined.png" alt="Website logo" class="hero__logo">
                 <h1 class="hero__title">Odin</h1>
             </div>
-            <p class="hero__img-credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a>
-                on <a href="https://unsplash.com/">Unsplash</a>
+            <p class="hero__img-credit">
+                Photo by <a href="https://unsplash.com/@haliewestphoto" target="_blank">Halie West</a>
+                on <a href="https://unsplash.com/" target="_blank">Unsplash</a>
             </p>
         </div>
 
-        <section class="sign-up-form">
+        <section class="content">
             <div class="introduction">
                 <p>
                     This is not a real online service! You know you need something like this in your
@@ -33,37 +39,40 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
 
-            <form action="" method="post" id="sign-up-form">
-                <p class="form-heading">Let's do this!</p>
-                <div class="form-group">
-                    <label for="first-name">First name</label>
-                    <input type="text" id="first-name" name="first-name" autocomplete="given-name">
-                </div>
-                <div class="form-group">
-                    <label for="last-name">Last name</label>
-                    <input type="text" id="last-name" name="last-name" autocomplete="family-name">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" autocomplete="email">
-                </div>
-                <div class="form-group">
-                    <label for="phone-number">Phone number</label>
-                    <input type="tel" id="phone-number" name="phone-number" autocomplete="tel">
-                </div>
-                <div class="form-group">
-                    <label for="password-1">Password</label>
-                    <input type="password" id="password-1" name="password-1" autocomplete="new-password">
-                </div>
-                <div class="form-group">
-                    <label for="password-2">Confirm password</label>
-                    <input type="password" id="password-2" name="password-2" autocomplete="new-password">
+            <form action="" method="post" id="sign-up-form" class="sign-up-form">
+                <p class="sign-up-form__heading">Let's do this!</p>
+                <div class="sign-up-form__input-container">
+                    <div class="form-group">
+                        <label for="first-name">First name</label>
+                        <input type="text" id="first-name" name="first-name" autocomplete="given-name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last name</label>
+                        <input type="text" id="last-name" name="last-name" autocomplete="family-name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" autocomplete="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="phone-number">Phone number</label>
+                        <input type="tel" id="phone-number" name="phone-number" autocomplete="tel" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password-1">Password</label>
+                        <input type="password" id="password-1" name="password-1" autocomplete="new-password" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password-2">Confirm password</label>
+                        <input type="password" id="password-2" name="password-2" autocomplete="new-password" required>
+                    </div>
                 </div>
             </form>
 
-            <button type="submit" form="sign-up-form">Create account</button>
-
-            <p>Already have an account? <a href="#">Log in</a></p>
+            <div class="action">
+                <button type="submit" form="sign-up-form" class="submit-button">Create account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
         </section>
     </main>
 </body>
