feat: validate matching passwords

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,7 @@
                     <div class="form-group">
                         <label for="password-1">Password</label>
                         <input type="password" id="password-1" name="password-1" autocomplete="new-password" required>
+                        <span class="password-error-msg">* Passwords do not match</span>
                     </div>
                     <div class="form-group">
                         <label for="password-2">Confirm password</label>
